# ida-mcp-rs

./: .goreleaser.yaml  .rustfmt.toml  Cargo.toml  README.md  build.rs  ci.just  justfile
.cargo/: config.toml
.github/workflows/: build.yml
docs/: BUILDING.md  TOOLS.md  TRANSPORTS.md
scripts/: gen-scoop-manifest.py
snap/: snapcraft.yaml
src/: crash_guard.rs  dsc.rs  error.rs  lib.rs  main.rs  tool_registry.rs
src/ida/: lock.rs  loop_impl.rs  mod.rs  pool.rs  remote.rs  request.rs  types.rs  worker.rs
src/ida/handlers/: controlflow.rs  database.rs  disasm.rs  functions.rs  globals.rs  imports.rs  memory.rs  mod.rs  script.rs  search.rs  strings.rs  structs.rs  types.rs  xrefs.rs
src/server/: http_config.rs  mod.rs  requests.rs  task.rs  tool_filter.rs
test/: http_bootstrap.sh  http_observability.sh  http_pool.sh  justfile  stdio_decompile.sh  stdio_elicitation.sh  stdio_rebuild_idb.sh  stdio_tool_filter.sh
test/payloads/: mini.jsonl  script.jsonl
