[package]
name = "ida-mcp"
version = "9.3.26"
edition = "2024"
description = "Headless IDA Pro MCP Server"
license = "MIT"
repository = "https://github.com/blacktop/ida-mcp-rs"
authors = ["blacktop"]
keywords = ["ida", "mcp", "reverse-engineering", "disassembly", "decompiler"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
idalib = { git = "https://github.com/blacktop/idalib.git", branch = "sdk-9.3.1" }
rmcp = { version = "2.2.0", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "elicitation", "schemars"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "signal", "process", "io-util"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
bytes = "1"
futures-util = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
tower-service = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "1"
idalib-build = { git = "https://github.com/blacktop/idalib.git", branch = "sdk-9.3.1", package = "idalib-build" }

# [patch."https://github.com/blacktop/idalib.git"]
# idalib = { path = "../idalib/idalib" }
# idalib-build = { path = "../idalib/idalib-build" }
# idalib-sys = { path = "../idalib/idalib-sys" }
